k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-staging
  labels:
    name: microservices-staging
    environment: staging
    managed-by: terraform
